  * Fixed a packing bug in the lsl.sim.drx.frame2frame function
  * Fixed a bug in lsl.imaging.utils.CorrelatedDataUV that cause getDataSet to always return all data
  * Fixed the baseline ordering in FITS IDI files that use the stand number mapper
  * Updated the FITS IDI reader to use the UVFITS  scheme for determining baseline sets
  * Major overhaul of the lsl.sim.vis module to use a new C-based simuation extension instead of AIPY
  * Fixed a bug in lsl.correlator.fx that caused the number of overlapped FFTs to be calculated incorrectly
  * Fixed a bug in lsl.correlator.fx.FXMaster/FXStokes that caused the last FFT window to be excluded from the integration
  * Removed the lsl.correlator.fx.SpecMasterP function
  * Updated the lsl.imaging.utils module to better deal with sparse FITS IDI/UVFITS files
  * Added support for the new MCS beam-dipole mode via the SDF keyword OBS_BDM
  * Various fixes to the lsl.imaging.deconv module
  * Added a plotting helper function to lsl.imaging.utils
  * Added a new overlay module for images called lsl.imaging.overlay
  * Fixed several bugs in lsl.sim.vis and lsl.imaging.utils related to single-channel data sets
  * Added an option to export the images created to imageIDI.py to a FITS image file
  * Small bugfix to the lsl.writer.tsfits module with regards to processing DRX frames
  * Cleaned up the setup.py script to uses NumPy's internal facilities to identify ATLAS
  * Updated the list of dependencies to include pytz
  * Added the 'iauConvention' keyword to the lsl.misc.beamformer.circularize() function

1.0.0
  * Added in LWA Development Primitives module (lsl.reader.ldp)
  * Added a function to lsl.misc.beamformer to convert X and Y linear pols. to circular L and R pols
  * Removed the lsl.correlator.visUtils module since it isn't used by any other modules or scripts
  * Switched the lsl.correlator modules over to returned all 'LFFT' channels
  * Replaced the Fermi first point source catalog with the 2-year catalog