@@ -14,7 +14,7 @@ from lsl.reader import errors
 
 
 __revision__ = "$ Revision: 2 $"
-__version__  = "0.4"
+__version__  = "0.5"
 __author__    = "Jayce Dowell"
 
 
@@ -27,12 +27,12 @@ drspecFile = os.path.join(dataPath, 'tests', 'drspec-test.dat')
 class reader_tests(unittest.TestCase):
 	"""A unittest.TestCase collection of unit tests for the lsl.reader
 	modules."""
-
+	
 	### TBW ###
-
+	
 	def test_tbw_read(self):
 		"""Test reading in a frame from a TBW file."""
-
+		
 		fh = open(tbwFile, 'rb')
 		# First frame is really TBW and stores the correct stand ID
 		frame1 = tbw.readFrame(fh)
@@ -46,22 +46,22 @@ class reader_tests(unittest.TestCase):
 		
 	def test_tbw_bits(self):
 		"""Test getting the data bits from a TBW file."""
-
+		
 		fh = open(tbwFile, 'rb')
 		# File contains 12-bit data, two ways
 		self.assertEqual(tbw.getDataBits(fh), 12)
 		frame1 = tbw.readFrame(fh)
 		self.assertEqual(frame1.getDataBits(), 12)
 		fh.close()
-	
+		
 	def test_tbw_errors(self):
 		"""Test reading errors."""
-
+		
 		fh = open(tbwFile, 'rb')
 		# Frames 1 through 8
 		for i in range(1,9):
 			frame = tbw.readFrame(fh)
-
+			
 		# Last frame should be an error (errors.eofError)
 		self.assertRaises(errors.eofError, tbw.readFrame, fh)
 		fh.close()
@@ -72,17 +72,17 @@ class reader_tests(unittest.TestCase):
 		fh.seek(1)
 		self.assertRaises(errors.syncError, tbw.readFrame, fh)
 		fh.close()
-
+		
 	def test_tbw_comps(self):
 		"""Test the TBW frame comparison operators (>, <, etc.) for time tags."""
-
+		
 		fh = open(tbwFile, 'rb')
 		# Frames 1 through 3
 		frames = []
 		for i in range(1,4):
 			frames.append(tbw.readFrame(fh))
 		fh.close()
-
+		
 		self.assertTrue(0 < frames[0])
 		self.assertFalse(0 > frames[0])
 		self.assertTrue(frames[-1] >= frames[0])
@@ -106,17 +106,17 @@ class reader_tests(unittest.TestCase):
 		
 		for i in xrange(1,len(frames)):
 			self.assertTrue( frames[i-1] >= frames[i] )
-
+			
 	def test_tbw_math(self):
 		"""Test mathematical operations on TBW frame data via frames."""
-
+		
 		fh = open(tbwFile, 'rb')
 		# Frames 1 through 3
 		frames = []
 		for i in range(1,4):
 			frames.append(tbw.readFrame(fh))
 		fh.close()
-
+		
 		# Multiplication
 		frameT = frames[0] * 2.0
 		for i in range(800):
@@ -127,7 +127,7 @@ class reader_tests(unittest.TestCase):
 		frameT = frames[0] * frames[1]
 		for i in range(800):
 			self.assertAlmostEqual(frameT.data.xy[i%2, i/2], frames[0].data.xy[i%2, i/2]*frames[1].data.xy[i%2, i/2], 2)
-		
+			
 		# Addition
 		frameA = frames[0] + 2.0
 		for i in range(800):
@@ -138,12 +138,12 @@ class reader_tests(unittest.TestCase):
 		frameA = frames[0] + frames[1]
 		for i in range(800):
 			self.assertAlmostEqual(frameA.data.xy[i%2, i/2], frames[0].data.xy[i%2, i/2]+frames[1].data.xy[i%2, i/2], 2)
-
+			
 	### TBN ###
-
+	
 	def test_tbn_read(self):
 		"""Test reading in a frame from a TBN file."""
-
+		
 		fh = open(tbnFile, 'rb')
 		# First frame is really TBN and stores the correct IDs
 		frame1 = tbn.readFrame(fh)
@@ -159,12 +159,12 @@ class reader_tests(unittest.TestCase):
 		
 	def test_tbn_errors(self):
 		"""Test reading in all frames from a truncated TBN file."""
-
+		
 		fh = open(tbnFile, 'rb')
 		# Frames 1 through 29
 		for i in range(1,30):
 			frame = tbn.readFrame(fh)
-
+			
 		# Last frame should be an error (errors.eofError)
 		self.assertRaises(errors.eofError, tbn.readFrame, fh)
 		fh.close()
@@ -175,36 +175,36 @@ class reader_tests(unittest.TestCase):
 		fh.seek(1)
 		self.assertRaises(errors.syncError, tbn.readFrame, fh)
 		fh.close()
-
+		
 	def test_tbn_block(self):
 		"""Test finding out how many stands are in a file."""
-
+		
 		fh = open(tbnFile, 'rb')
 		nx, ny = tbn.getFramesPerObs(fh)
 		self.assertEqual(nx, 10)
 		self.assertEqual(ny, 10)
 		fh.close()
-
+		
 	def test_tbn_rate(self):
 		"""Test finding out the sample rate of a TBN file."""
-
+		
 		fh = open(tbnFile, 'rb')
 		rate = tbn.getSampleRate(fh)
 		self.assertEqual(rate, 100000)
 		code = tbn.getSampleRate(fh, FilterCode=True)
 		self.assertEqual(code, 7)
 		fh.close()
-
+		
 	def test_tbn_comps(self):
 		"""Test the TBN frame comparison operators (>, <, etc.) for time tags."""
-
+		
 		fh = open(tbnFile, 'rb')
 		# Frames 1 through 29
 		frames = []
 		for i in range(1,30):
 			frames.append(tbn.readFrame(fh))
 		fh.close()
-
+		
 		self.assertTrue(0 < frames[0])
 		self.assertFalse(0 > frames[0])
 		self.assertTrue(frames[-1] >= frames[0])
@@ -228,17 +228,17 @@ class reader_tests(unittest.TestCase):
 		
 		for i in xrange(1,len(frames)):
 			self.assertTrue( frames[i-1] >= frames[i] )
-
+			
 	def test_tbn_math(self):
 		"""Test mathematical operations on TBN frame data via frames."""
-
+		
 		fh = open(tbnFile, 'rb')
 		# Frames 1 through 29
 		frames = []
 		for i in range(1,30):
 			frames.append(tbn.readFrame(fh))
 		fh.close()
-
+		
 		# Multiplication
 		frameT = frames[0] * 2.0
 		for i in range(512):
@@ -249,7 +249,7 @@ class reader_tests(unittest.TestCase):
 		frameT = frames[0] * frames[1]
 		for i in range(512):
 			self.assertAlmostEqual(frameT.data.iq[i], frames[0].data.iq[i]*frames[1].data.iq[i], 2)
-		
+			
 		# Addition
 		frameA = frames[0] + 2.0
 		for i in range(512):
@@ -260,27 +260,27 @@ class reader_tests(unittest.TestCase):
 		frameA = frames[0] + frames[1]
 		for i in range(512):
 			self.assertAlmostEqual(frameA.data.iq[i], frames[0].data.iq[i]+frames[1].data.iq[i], 2)
-
+			
 	### TBW/TBN Mix-up ###
-
+	
 	def test_tbw_tbn_catch(self):
 		"""Test that tbw will not read tbn files and vice versa."""
-
+		
 		fh = open(tbnFile, 'rb')
 		frame1 = tbw.readFrame(fh)
 		self.assertFalse(frame1.header.isTBW())
 		fh.close()
-
+		
 		fh = open(tbwFile, 'rb')
 		frame1 = tbn.readFrame(fh)
 		self.assertFalse(frame1.header.isTBN())
 		fh.close()
 		
 	### DRX ###
-
+	
 	def test_drx_read(self):
 		"""Test reading in a frame from a DRX file."""
-
+		
 		fh = open(drxFile, 'rb')
 		# First frame is really DRX and stores the IDs
 		frame1 = drx.readFrame(fh)
@@ -316,15 +316,15 @@ class reader_tests(unittest.TestCase):
 		self.assertEqual(cFrames.y2.parseID(), (4,2,1))
 		
 		fh.close()
-
+		
 	def test_drx_errors(self):
 		"""Test reading in all frames from a truncated DRX file."""
-
+		
 		fh = open(drxFile, 'rb')
 		# Frames 1 through 32
 		for i in range(1,33):
 			frame = drx.readFrame(fh)
-
+			
 		# Last frame should be an error (errors.eofError)
 		self.assertRaises(errors.eofError, drx.readFrame, fh)
 		fh.close()
@@ -335,18 +335,18 @@ class reader_tests(unittest.TestCase):
 		fh.seek(1)
 		self.assertRaises(errors.syncError, drx.readFrame, fh)
 		fh.close()
-
+		
 	def test_drx_beam(self):
 		"""Test finding out how many beams are present in a DRX file."""
-
+		
 		fh = open(drxFile, 'rb')
 		nBeam = drx.getBeamCount(fh)
 		self.assertEqual(nBeam, 1)
 		fh.close()
-
+		
 	def test_drx_block(self):
 		"""Test finding out how many tunings/pols. per beam are in a DRX file."""
-
+		
 		fh = open(drxFile, 'rb')
 		b1, b2, b3, b4 = drx.getFramesPerObs(fh)
 		self.assertEqual(b1, 0)
@@ -368,17 +368,17 @@ class reader_tests(unittest.TestCase):
 		# Filter code
 		self.assertEqual(cFrame.getFilterCode(), drx.getSampleRate(fh, FilterCode=True))
 		fh.close()
-
+		
 	def test_drx_comps(self):
 		"""Test the DRX frame comparison operators (>, <, etc.) for time tags."""
-
+		
 		fh = open(drxFile, 'rb')
 		# Frames 1 through 10
 		frames = []
 		for i in range(1,11):
 			frames.append(drx.readFrame(fh))
 		fh.close()
-
+		
 		self.assertTrue(0 < frames[0])
 		self.assertFalse(0 > frames[0])
 		self.assertTrue(frames[-1] >= frames[0])
@@ -402,17 +402,17 @@ class reader_tests(unittest.TestCase):
 		
 		for i in xrange(1,len(frames)):
 			self.assertTrue( frames[i-1] >= frames[i] )
-
+			
 	def test_drx_math(self):
 		"""Test mathematical operations on DRX frame data via frames."""
-
+		
 		fh = open(drxFile, 'rb')
 		# Frames 1 through 10
 		frames = []
 		for i in range(1,11):
 			frames.append(drx.readFrame(fh))
 		fh.close()
-
+		
 		# Multiplication
 		frameT = frames[0] * 2.0
 		for i in range(4096):
@@ -423,7 +423,7 @@ class reader_tests(unittest.TestCase):
 		frameT = frames[0] * frames[1]
 		for i in range(4096):
 			self.assertAlmostEqual(frameT.data.iq[i], frames[0].data.iq[i]*frames[1].data.iq[i], 2)
-		
+			
 		# Addition
 		frameA = frames[0] + 2.0
 		for i in range(4096):
@@ -434,32 +434,32 @@ class reader_tests(unittest.TestCase):
 		frameA = frames[0] + frames[1]
 		for i in range(4096):
 			self.assertAlmostEqual(frameA.data.iq[i], frames[0].data.iq[i]+frames[1].data.iq[i], 2)
-
+			
 	### DR Spectrometer ###
-
+	
 	def test_drspec_read(self):
 		"""Test reading in a frame from a DR spectrometer file."""
-
+		
 		fh = open(drspecFile, 'rb')
 		# First frame is really DR spectrometer and stores the IDs
 		frame1 = drspec.readFrame(fh)
 		beam = frame1.parseID()
 		self.assertEqual(beam, 1)
-
+		
 		# Second frame
 		frame2 = drspec.readFrame(fh)
 		beam = frame2.parseID()
 		self.assertEqual(beam, 1)
 		fh.close()
-
+		
 	def test_drspec_errors(self):
 		"""Test reading in all frames from a truncated DR spectrometer file."""
-
+		
 		fh = open(drspecFile, 'rb')
 		# Frames 1 through 8
 		for i in range(1,8):
 			frame = drspec.readFrame(fh)
-
+			
 		# Last frame should be an error (errors.eofError)
 		self.assertRaises(errors.eofError, drspec.readFrame, fh)
 		fh.close()
@@ -471,20 +471,38 @@ class reader_tests(unittest.TestCase):
 		self.assertRaises(errors.syncError, drspec.readFrame, fh)
 		fh.close()
 		
-	def test_drspec_rate(self):
-		"""Test finding out the DR spectrometer sample rate."""
+	def test_drspec_metadata(self):
+		"""Test finding out the DR spectrometer metadata."""
 		
 		fh = open(drspecFile, 'rb')
 		cFrame = drspec.readFrame(fh)
 		fh.seek(0)
 		
+		# Beam
+		self.assertEqual(cFrame.parseID(), 1)
+		
 		# Sample rate
-		self.assertEqual(cFrame.getSampleRate(), drspec.getSampleRate(fh))
+		self.assertAlmostEqual(cFrame.getSampleRate(), 19.6e6, 1)
+		self.assertAlmostEqual(cFrame.getSampleRate(), drspec.getSampleRate(fh), 1)
 		
 		# Filter code
+		self.assertEqual(cFrame.getFilterCode(), 7)
 		self.assertEqual(cFrame.getFilterCode(), drspec.getSampleRate(fh, FilterCode=True))
+		
+		# FFT windows per integration
+		self.assertEqual(cFrame.getFFTsPerIntegration(), 6144)
+		self.assertEqual(cFrame.getFFTsPerIntegration(), drspec.getFFTsPerIntegration(fh))
+		
+		# Transform size
+		self.assertEqual(cFrame.getTransformSize(), 1024)
+		self.assertEqual(cFrame.getTransformSize(), drspec.getTransformSize(fh))
+		
+		# Integration time
+		self.assertAlmostEqual(cFrame.getIntegrationTime(), 0.32099265, 8)
+		self.assertAlmostEqual(cFrame.getIntegrationTime(), drspec.getIntegrationTime(fh), 8)
+		
 		fh.close()
-
+		
 	def test_drspec_comps(self):
 		"""Test the DR spectrometer frame comparison operators (>, <, etc.) for time tags."""
 
@@ -518,19 +536,19 @@ class reader_tests(unittest.TestCase):
 		for i in xrange(1,len(frames)):
 			self.assertTrue( frames[i-1] >= frames[i] )
 		fh.close()
-
+		
 	def test_drspec_math(self):
 		"""Test mathematical operations on DR spectrometer frame data via frames."""
-
+		
 		fh = open(drspecFile, 'rb')
 		# Frames 1 through 7
 		frames = []
 		for i in range(1,8):
 			frames.append(drspec.readFrame(fh))
 		fh.close()
-
+		
 		nPts = frames[0].data.XX0.size
-
+		
 		# Multiplication
 		frameT = frames[0] * 2.0
 		for i in xrange(nPts):
@@ -541,7 +559,7 @@ class reader_tests(unittest.TestCase):
 		frameT = frames[0] * frames[1]
 		for i in xrange(nPts):
 			self.assertAlmostEqual(frameT.data.YY0[i], frames[0].data.YY0[i]*frames[1].data.YY0[i], 2)
-		
+			
 		# Addition
 		frameA = frames[0] + 2.0
 		for i in xrange(nPts):
@@ -552,6 +570,7 @@ class reader_tests(unittest.TestCase):
 		frameA = frames[0] + frames[1]
 		for i in xrange(nPts):
 			self.assertAlmostEqual(frameA.data.YY0[i], frames[0].data.YY0[i]+frames[1].data.YY0[i], 2)
+
 
 class reader_test_suite(unittest.TestSuite):
 	"""A unittest.TestSuite class which contains all of the lsl.reader units 
