@@ -16,7 +16,7 @@
   * Fixed a bug in lsl.imaging.utils.CorrelatedDataUV that cause getDataSet to always return all data
   * Fixed the baseline ordering in FITS IDI files that use the stand number mapper
   * Updated the FITS IDI reader to use the UVFITS  scheme for determining baseline sets
-  * Major overhaul of the lsl.sim.vis module to use a new C-based simuation extension instead of AIPY
+  * Major overhaul of the lsl.sim.vis module to use a new C-based simulation extension instead of AIPY
   * Fixed a bug in lsl.correlator.fx that caused the number of overlapped FFTs to be calculated incorrectly
   * Fixed a bug in lsl.correlator.fx.FXMaster/FXStokes that caused the last FFT window to be excluded from the integration
   * Removed the lsl.correlator.fx.SpecMasterP function
@@ -31,6 +31,8 @@
   * Cleaned up the setup.py script to uses NumPy's internal facilities to identify ATLAS
   * Updated the list of dependencies to include pytz
   * Added the 'iauConvention' keyword to the lsl.misc.beamformer.circularize() function
+  * Added a few new convenience functions to the lsl.reader.drspec module
+  * Added 'lwavl' as an alias to 'lwa1' in the lsl.common.stations module
 
 1.0.0
   * Added in LWA Development Primitives module (lsl.reader.ldp)
